--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "iqbalperkasa.com",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.0",
+  "description": "an Indonesian web developer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel index.pug",
+    "build": "rm -rf build/ && parcel build index.pug -d build"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-htmlmin": "^4.0.0",
-    "gulp-sass": "^3.1.0"
+  "devDependencies": {
+    "parcel-bundler": "^1.12.3",
+    "pug": "^2.0.4",
+    "sass": "^1.22.10"
   }
 }
