--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "iqbalperkasa.com",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "parcel serve index.pug",
-    "build": "rm -rf build/ && parcel build index.pug --dist-dir build"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
-  "license": "ISC",
+  "dependencies": {
+    "vue": "^3.0.5"
+  },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@parcel/optimizer-cssnano": "2.0.0-nightly.592",
-    "@parcel/optimizer-htmlnano": "2.0.0-nightly.592",
-    "@parcel/packager-css": "2.0.0-nightly.592",
-    "@parcel/packager-html": "2.0.0-nightly.592",
-    "@parcel/transformer-css": "2.0.0-nightly.592",
-    "@parcel/transformer-html": "2.0.0-nightly.592",
-    "@parcel/transformer-postcss": "2.0.0-nightly.592",
-    "@parcel/transformer-posthtml": "2.0.0-nightly.592",
-    "@parcel/transformer-pug": "2.0.0-nightly.592",
-    "@parcel/transformer-sass": "2.0.0-nightly.592",
-    "parcel": "^2.0.0-beta.1",
-    "postcss": "^8.2.1",
-    "pug": "^3.0.0",
-    "sass": "^1.32.7"
+    "@vitejs/plugin-vue": "^1.2.2",
+    "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.3.0",
+    "pug": "^3.0.2",
+    "stylus": "^0.54.8",
+    "tailwindcss": "^2.1.2",
+    "vite": "^2.3.4"
   }
 }
