update portfolio link

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "redirects": [
     {
       "source": "/portfolio",
-      "destination": "https://www.notion.so/Portfolio-dd1dd7f00b2d4e5897966e30fe655bde",
+      "destination": "https://iqbalperkasa.notion.site/Portfolio-dd1dd7f00b2d4e5897966e30fe655bde",
       "permanent": false
     },
     {
