update title and resume link

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,11 @@
       "source": "/resume",
       "destination": "https://drive.google.com/file/d/1BzdY6eh2MCu-WM1yB7Xmu-SNVKjClRzm/view",
       "permanent": false
+    },
+    {
+      "source": "/cv",
+      "destination": "https://read.cv/iqbalperkasa",
+      "permanent": false
     }
   ]
 }
