--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "redirects": [
     {
       "source": "/portfolio",
-      "destination": "https://iqbalperkasa.notion.site/Portfolio-dd1dd7f00b2d4e5897966e30fe655bde",
+      "destination": "https://iqbalperkasa.notion.site/Iqbal-Perkasa-f1f70ae087184ec58a4f78f95a6fb7f5?pvs=4",
       "permanent": false
     },
     {
