--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "vite-project",
-  "version": "0.0.0",
+  "name": "nuxt-app",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "dependencies": {
+    "@nuxt/icon": "^1.4.8",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@vueuse/core": "^11.0.1",
+    "nuxt": "^3.12.4",
+    "vue": "latest"
   },
   "devDependencies": {
-    "vite": "^2.9.16"
+    "typescript": "^5.5.4",
+    "vue-tsc": "^2.0.29"
   }
 }
