--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@iconify-json/gravity-ui": "^1.2.5",
     "typescript": "^5.7.2",
     "vue-tsc": "^2.1.10"
   }
